--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,7 @@
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-PYVERS := $(shell pyversions -r)
+PYVERS := $(shell pyversions -i)
 
 configure: configure-stamp
 configure-stamp:
